# irods_rule_engine_plugin_update_collection_mtime

./: CMakeLists.txt  README.md  irods_consortium_continuous_integration_build_hook.py  irods_consortium_continuous_integration_test_hook.py
packaging/: postinst  test_rule_engine_plugin_update_collection_mtime.py  update_collection_mtime.py.template  update_collection_mtime.re.template
src/: libirods_rule_engine_plugin-update_collection_mtime.cpp  libirods_rule_engine_plugin-update_collection_timestamp.cpp
